feat: update doc swag.
