# api/docs/swagger.json
@@ -20,6 +20,11 @@
     "paths": {
         "/pix-keys": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Register Pix Key",
                 "consumes": [
                     "application/json"
@@ -72,6 +77,11 @@
         },
         "/pix-keys/{key}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find Pix By Key",
                 "consumes": [
                     "application/json"
@@ -85,13 +95,11 @@
                 "summary": "Find Pix By Key",
                 "parameters": [
                     {
-                        "description": "find-pix-key request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.FindPixKeyRequest"
-                        }
+                        "type": "string",
+                        "description": "pix-key parameter",
+                        "name": "key",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -131,17 +139,6 @@
                     "type": "string"
                 },
                 "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "request.FindPixKeyRequest": {
-            "type": "object",
-            "required": [
-                "pixKey"
-            ],
-            "properties": {
-                "pixKey": {
                     "type": "string"
                 }
             }
